--- a/auth_app/Base.lproj/Main.storyboard
+++ b/auth_app/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7H-mA-kvs">
-                                <rect key="frame" x="271" y="383" width="52" height="30"/>
+                                <rect key="frame" x="271" y="405" width="52" height="30"/>
                                 <animations/>
                                 <state key="normal" title="OAUTH"/>
                                 <connections>
@@ -38,14 +38,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MH-VH-t86">
-                                <rect key="frame" x="272" y="338" width="57" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Register"/>
-                                <connections>
-                                    <action selector="register:" destination="fjw-7P-mbe" eventType="touchUpInside" id="XVY-xm-wq5"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWP-Aq-xA3">
                                 <rect key="frame" x="279" y="199" width="42" height="21"/>
                                 <animations/>
@@ -53,27 +45,49 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MH-VH-t86">
+                                <rect key="frame" x="270" y="367" width="60" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Register">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="register:" destination="fjw-7P-mbe" eventType="touchUpInside" id="XVY-xm-wq5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rfC-GY-4Qe">
+                                <rect key="frame" x="266" y="329" width="63" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Log in">
+                                    <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="login:" destination="fjw-7P-mbe" eventType="touchUpInside" id="FbP-nv-mhN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="N7H-mA-kvs" firstAttribute="top" secondItem="6MH-VH-t86" secondAttribute="bottom" constant="20" id="3qI-nM-45d"/>
+                            <constraint firstItem="N7H-mA-kvs" firstAttribute="top" secondItem="6MH-VH-t86" secondAttribute="bottom" constant="20" id="2KK-od-7hE"/>
+                            <constraint firstItem="rfC-GY-4Qe" firstAttribute="top" secondItem="sVv-iV-m3t" secondAttribute="bottom" constant="20" id="CM6-Ef-R1P"/>
                             <constraint firstAttribute="trailingMargin" secondItem="rgd-Iw-O6E" secondAttribute="trailing" constant="20" id="EYo-DN-wDy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="sVv-iV-m3t" secondAttribute="trailing" constant="20" id="GfC-gF-InW"/>
                             <constraint firstItem="sVv-iV-m3t" firstAttribute="leading" secondItem="eFA-4D-x3l" secondAttribute="leadingMargin" constant="20" id="IFx-At-ei7"/>
                             <constraint firstItem="sVv-iV-m3t" firstAttribute="top" secondItem="rgd-Iw-O6E" secondAttribute="bottom" constant="20" id="JfQ-Ow-Gkr"/>
                             <constraint firstItem="rgd-Iw-O6E" firstAttribute="top" secondItem="faV-Y4-ArI" secondAttribute="bottom" constant="150" id="PIN-nx-NZl"/>
+                            <constraint firstItem="6MH-VH-t86" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="S7M-wQ-du0"/>
                             <constraint firstItem="rgd-Iw-O6E" firstAttribute="leading" secondItem="eFA-4D-x3l" secondAttribute="leadingMargin" constant="20" id="SYD-kK-dID"/>
                             <constraint firstItem="rgd-Iw-O6E" firstAttribute="centerY" secondItem="eFA-4D-x3l" secondAttribute="centerY" id="Syp-fr-Cgu"/>
                             <constraint firstItem="FWP-Aq-xA3" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="Yqe-yA-Ss9"/>
-                            <constraint firstItem="6MH-VH-t86" firstAttribute="top" secondItem="sVv-iV-m3t" secondAttribute="bottom" constant="20" id="ZxM-R2-sNK"/>
                             <constraint firstItem="rgd-Iw-O6E" firstAttribute="top" secondItem="FWP-Aq-xA3" secondAttribute="bottom" constant="20" id="bPf-96-nh0"/>
                             <constraint firstItem="sVv-iV-m3t" firstAttribute="top" secondItem="rgd-Iw-O6E" secondAttribute="bottom" constant="20" id="du0-aO-JgU"/>
+                            <constraint firstItem="rfC-GY-4Qe" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="eRr-no-cjb"/>
                             <constraint firstItem="N7H-mA-kvs" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="j0b-Fr-D5p"/>
+                            <constraint firstItem="6MH-VH-t86" firstAttribute="top" secondItem="rfC-GY-4Qe" secondAttribute="bottom" constant="20" id="kWd-zF-chB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="FWP-Aq-xA3" secondAttribute="trailing" constant="20" id="l3u-va-9Db"/>
                             <constraint firstItem="FWP-Aq-xA3" firstAttribute="leading" secondItem="eFA-4D-x3l" secondAttribute="leadingMargin" constant="20" id="o8v-s5-cqw"/>
                             <constraint firstItem="rgd-Iw-O6E" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="yKG-cR-QG7"/>
-                            <constraint firstItem="6MH-VH-t86" firstAttribute="centerX" secondItem="eFA-4D-x3l" secondAttribute="centerX" id="z2J-UX-LJ7"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -157,6 +171,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GPX-9e-DN1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="708" y="178"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="UMG-AU-Zgb">
+            <objects>
+                <viewController id="y1O-6a-fBA" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nf1-t0-7Xl"/>
+                        <viewControllerLayoutGuide type="bottom" id="kRr-bY-7Xt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="D5s-Kj-BQc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uft-BU-ex0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
